# dotfiles

./: .gitignore  .prettierignore  .prettierrc.json  .tmux.conf  .zshrc  AGENTS.md  INSTRUCTIONS.md  PLUGINS.md  README.md  hichkeyp  in_testing_profile.ps1  install.ps1  uninstall.ps1  update.ps1
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.claude/agents/: advisor.md
.codex/: AGENTS.md
.cursor/rules/: form-integrations.mdc  pr-workflow.mdc
lua/: setup.md
lua/lua/: init.lua
nvim/: init.lua  lazy-lock.json  plugins.md  raw.md  setup-windows.md  setup.md
nvim/lua/: init.lua
plugins/x-tweet-fetcher/skills/x-tweet-fetcher/: pyproject.toml
plugins/x-tweet-fetcher/skills/x-tweet-fetcher/src/xtf/: config.py
plugins/x-tweet-fetcher/skills/x-tweet-fetcher/tests/: test_playwright_snapshots.py
powershell/: Microsoft.PowerShell_profile.ps1  in_testing_profile.ps1  recovery_last_session_profile.ps1  required_config.json  settings.json
powershell/themes/: robbyrussell.omp.json
scripts/: install-claude-md.py  install.sh  sync-claude-plugin-marketplace.py  uninstall.sh  update.sh
scripts/macos/: system-cleanup.sh
scripts/windows/: check-skills.bat  check-skills.ps1  setup-claude-skills.bat  setup-codex-skills.bat  setup-cursor-rules.bat  system-cleanup.bat
skill/apple-design/: SKILL.md
skill/babysit/: SKILL.md
skill/coding-standards/: SKILL.md
skill/commit-message/: SKILL.md
skill/create-pr/: SKILL.md
skill/grill-me/: SKILL.md
skill/linkedin-optimizer/: SKILL.md
skill/plan-format/: SKILL.md
skill/pr-generate-description/: SKILL.md
(+297 files in other folders)
